--- a/src/main/java/view/ProfileView.form
+++ b/src/main/java/view/ProfileView.form
@@ -185,7 +185,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="jLabel6"/>
+            <Property name="text" type="java.lang.String" value="Chuc Vu"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
