--- a/src/main/java/view/DangKyView.form
+++ b/src/main/java/view/DangKyView.form
@@ -417,6 +417,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_imgMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_imgActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_them">
